frontend: fix transaction filter layout overflow on mobile

--- a/frontends/web/src/routes/account/components/transaction-filters/transaction-filters.module.css
+++ b/frontends/web/src/routes/account/components/transaction-filters/transaction-filters.module.css
@@ -25,6 +25,7 @@
 @media (max-width: 768px) {
     .filterRow {
         flex-direction: column;
+        flex-wrap: nowrap;
     }
 
     .dateGroup,
